// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel carousel COMPACT mode all elements in same message 1`] = `
Array [
  "
Previo",
  "
Durante",
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel (just text in button) with payload/path buttons 1`] = `
Array [
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={0}
    type="text"
    typing={0}
  >
    1. Previo a la compra
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={1}
    type="text"
    typing={0}
  >
    2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with payload/path buttons 1`] = `
Array [
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={0}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    
1. Previo a la compra
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    
2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with url buttons 1`] = `
Array [
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={0}
    type="text"
    typing={0}
  >
    *Snatch* _Five minutes, Turkish_
    
- Visit website: https://www.imdb.com/title/tt0208092
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={false}
    newkey={1}
    type="text"
    typing={0}
  >
    *El laberinto del fauno* _2006_
    
- Visit website: https://www.imdb.com/title/tt0457430
  </message>,
]
`;
